# cardnote-compiler-rs

./: .gitignore  2026-05-26-卡片示例必含元素与Prompts对照分析.md  CHANGELOG.md  Cargo.toml  README.md  mock_provider.py  test_md  verify_acceptance.sh
.claudemem/: CACHEDIR.TAG  config.json  index.db
docs/: 42md-absorption-plan.md
documents/: README.md  人生模式.md  人生模式V2.md  人生模式_PyMuPDF转换.md
prompts/: action_card.md  all_cards.md  assign_cards.md  counter_intuit_card.md  entity.md  entity_extraction.md  event_card.md  extract_knowledge.md  free_card.md  graph_card.md  index_card.md  knowledge_card.md  new_word_card.md  note_card.md  person_card.md  quality_check.md  quote_card.md  relation_graph.md  review_card.md  summary.md  technique_card.md  term_card.md  unified.md
scripts/: paddle_ocr_pdf.py
src/: api.rs  batch.rs  config.rs  converter.rs  dedup.rs  diagnostics.rs  doc_type.rs  error.rs  health.rs  lib.rs  main.rs  models.rs  output.rs  pipeline.rs  providers.rs  rate_limiter.rs  scan.rs
src/quality/: card_lint.rs  metrics.rs  mod.rs  pdf_postprocess.rs  preprocess.rs  report.rs  typo_lint.rs
src/stages/: cards.rs  common.rs  entities.rs  graph.rs  mod.rs  summary.rs
test/: review_card.md
test/en_prompts_v3/: action_card_en.md  term_card_en.md
test/prompts_backup/: action_card.md  book_curator.md  cross_document.md  free_card_en.md  graph_card.md  index_card.md  knowledge_card_en.md  relation_graph.md  technique_card.md
test/review_reports/: 2026-05-31-安全与代码质量修复完成报告.md
tests/: 42md_analysis.md  e2e_pipeline.rs  integration_cli.rs  integration_dedup_isolation.rs  integration_output.rs  integration_pipeline_internals.rs  integration_sqlite_persistence.rs  integration_stages.rs  integration_test.rs
tests/common/: mod.rs
tests/en_prompts_v3/: index_card_en.md  quote_card_en.md
tests/prompts_backup/: all_cards.md  event_card.md  graph_card_en.md  knowledge_card.md  note_card.md  note_card_en.md  (+5 more)
(+42 files in other folders)
