[package]
name = "cardnote_compiler"
version = "0.1.1"
edition = "2024"
description = "CardNote Compiler — 把文档编译成知识卡片 (Rust 重构版)"
authors = ["Xinmin"]

[[bin]]
name = "cardc"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.44", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 正则
regex = "1.11"

# 日期时间
chrono = "0.4"

# 环境变量
dotenvy = "0.15"

# 终端颜色 (替代 Python rich)
colored = "3.0"

# 编码探测
encoding_rs = "0.8"

# 路径处理
walkdir = "2.5"

# 临时目录
tempfile = "3.14"

# 路径展开 (~ -> home)
shellexpand = "3.1"

# PDF 解析（纯 Rust，替代 PyMuPDF 做类型检测）
lopdf = "0.36"

[dev-dependencies]
